Now using ESNext for tsconfig.json.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
     "include": ["src/default/assets/js/src/**/*.ts"],
     "compilerOptions": {
-        "target": "ES5",
-        "module": "ES2015",
-        "lib": ["ES2016", "DOM", "DOM.Iterable"],
+        "target": "ESNext",
+        "module": "ESNext",
+        "lib": ["ESNext", "DOM", "DOM.Iterable"],
         "declaration": false,
         "skipLibCheck": true,
         "sourceMap": false,
