Added rules for prettier.

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,1 +1,8 @@
-{}
+{
+    "arrowParens": "avoid",
+    "printWidth": 200,
+    "useTabs": true,
+    "bracketSpacing": false,
+    "tabWidth": 4,
+    "singleQuote": true
+}
