--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,7 +18,7 @@ jobs:
               if: steps.check.outputs.changed == 'true'
               uses: actions/setup-node@v1
               with:
-                  node-version: "12"
+                  node-version: '12'
             - name: Install
               if: steps.check.outputs.changed == 'true'
               run: npm i
