--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "typedoc-darker-theme",
 	"description": "A darker theme for typedoc.",
-	"version": "1.1.5",
+	"version": "1.2.0",
 	"homepage": "https://typedoc.org/",
 	"main": "bin/plugin.js",
 	"files": [
@@ -44,6 +44,10 @@
 		"webpack-merge": "^5.7.3"
 	},
 	"keywords": [
+		"typedoc",
+		"dark",
+		"theme",
+		"dark-theme",
 		"typescript",
 		"documentation",
 		"generator"
